--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
+<!doctype html>
+
 <html>
 	<head>
 
 	</head>
-<body>
-<h1>Hello World!</h1>
-<P>Test</P>
+	<body>
 
-</body>
+	</body>
 
 </html>
