Update with Homework

--- a/class_3/index.html
+++ b/class_3/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<script src = script.js></script>
 		<script src = vezba.js></script>
-
+		<script src = homework.js></script>
 
 	</body>
 </html>
